--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,8 @@ p {
   display: block;
   margin: auto;
   width: 70%;
-  border-radius: 50%;
+  /* border-radius: 50%; */
+  padding: 20px;
 }
 
 #about-info .info-left {
